# esp32_proj

./: .gitignore  .project  CMakeLists.txt  README.md
core/: CMakeLists.txt  main.c
doc/: Repo - esp32_proj - ErisdarDemo - GitHub.url
doc/board/: readme.txt
doc/esp_idf/clangd_bug/: readme.txt
doc/esp_idf/debug/: Debug Your Project - - — ESP-IDF Extension for VSCode latest documentation.url  ref -  getting the debugger working in VS Code - ESP32 Forum.url
doc/esp_proj/: readme.txt
doc/esp_proj/demos/: readme.txt
doc/esp_proj/idf_demos/: esp_idf_sel.xlsx  hello_world.lnk
doc/vs_code/: readme.txt
doc/vs_code/include_path/: readme.txt
doc/vs_code/open_to_wksp/: readme.txt
lbr/: utils.c  utils.h
proj/: .clangd  .project  CMakeLists.txt  esp32_proj.code-workspace  sdkconfig
test/: readme.txt
